:bug: Fix package path to main class

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>SolarTimeAlarm</mainClass>
+                            <mainClass>eu.f1nn.SolarTimeAlarm</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
